# ai-applications-development-from-api-to-agents

./: main.py  pyproject.toml
commons/: constants.py
t1_llm_api/: base_app.py
t1_llm_api/anthropic/: client.py  custom_client.py
t1_llm_api/gemini/: client.py  custom_client.py
t1_llm_api/openai/: base.py
t1_llm_api/openai/chat/completions/: client.py  custom_client.py
t1_llm_api/openai/responses/: client.py  custom_client.py
t2_llms_output_tuning/: anthropic_task.py  gemini_task.py  openai_chat_completions_task.py  openai_responses_task.py
t3_content_generation/: README.md
t3_content_generation/t1/: image_analysis.py
t3_content_generation/t2/: gpt_image_edit.py  gpt_image_generation.py
t3_content_generation/t3/: speech_to_text.py
t3_content_generation/t4/: text_to_speech.py
t3_content_generation/t5/: speech_to_speech.py
t4_rag_fundamentals/: app.py
t5_rag_advanced/: app.py
t5_rag_advanced/embeddings/: embeddings_client.py  text_processor.py
t6_grounding/t1/: no_grounding.py
t6_grounding/t2/: input_api_based.py  input_vector_based.py
t6_grounding/t3/: in_out_grounding.py
t7_guardrails/t1/: prompt_injection.py
t7_guardrails/t2/: input_llm_based_validation.py
t7_guardrails/t3/: output_llm_based_validation.py
t7_guardrails/t4/: streaming_pii_guardrail.py
